#2913 [Modal] fix: modal z-index causing visual bug

--- a/css/scss/modal/_riskassessment-task.scss
+++ b/css/scss/modal/_riskassessment-task.scss
@@ -56,5 +56,5 @@
 }
 
 .riskassessment-task-edit-modal .wpeo-modal.modal-riskassessment-task.modal-active {
-  z-index: 1003;
+  z-index: 1004;
 }
